sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var flag = false;
  var nb = getValueCount();
	do{
		flag = false;
    	for(i <- 0 to nb){
        if(isSmaller(i,i+1)){
          sawp(i,i+1);
          flag = true;     
        }
        
      }
    
  }while(flag);
}